# store_of_seeds

./: .env  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml
.github/workflows/: ci.yaml
apps/accounts/: admin.py  app.py  forms.py  models.py  urls.py  views.py
apps/blog/: admin.py  apps.py  models.py  urls.py  views.py
apps/cart/: apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
apps/discounts/: admin.py  apps.py  models.py
apps/orders/: admin.py  apps.py  cdek.py  forms.py  models.py  payments.py  signals.py  tasks.py  telegram.py  urls.py  views.py
apps/pages/: admin.py  admin_menu.py  apps.py  models.py  urls.py  views.py
apps/products/: admin.py  apps.py  models.py  urls.py  views.py
apps/reports/: admin.py  admin_menu.py  apps.py  models.py  urls.py  views.py
apps/users/: admin.py  models.py
config/: celery.py  settings.py  urls.py
config/settings/: base.py
static/js/: orders.js
templates/: base.html
templates/accounts/: change_password.html  customer_register.html  login.html  orders_list.html  profile.html  profile_edit.html
templates/blog/: _sidebar.html  article_detail.html  article_list.html  category_article_list.html
templates/cart/: detail.html
templates/includes/: _footer.html  _header.html  _navigation.html  _pagination.html
templates/orders/: old_payment_success.html  order_create.html  order_detail.html  payment_done.html  payment_failure.html  payment_process.html  payment_success.html
templates/pages/: default.html
templates/report/: report_list.html
(+76 files in other folders)
