[project]
name = "store-of-seeds"
version = "0.1.0"
description = "Online store of seeds and equipment for growing microgreens"
authors = [
    {name = "Vladimir Bogdanov",email = "vld.bgdn@icloud.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "django (==5.2)",
    "black (>=25.1.0,<26.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "django-model-utils (>=5.0.0,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "django-ckeditor-5 (>=0.2.18,<0.3.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "django-jazzmin (>=3.0.1,<4.0.0)",
    "yookassa (>=3.5.0,<4.0.0)",
    "django-celery-results (>=2.6.0,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
